syntax = "proto3";

package asset.v0;

option go_package = "master-ovasabi/api/protos/asset/v0;assetv0";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Asset service handles storage and retrieval of 3D assets
service AssetService {
  // Upload a small asset (< 500KB) in a single request
  rpc UploadLightAsset(UploadLightAssetRequest) returns (Asset);

  // Start a heavy asset upload session (> 500KB)
  rpc StartHeavyAssetUpload(StartHeavyAssetUploadRequest) returns (StartHeavyAssetUploadResponse);

  // Stream chunks for a heavy asset upload
  rpc StreamAssetChunk(stream AssetChunk) returns (google.protobuf.Empty);

  // Complete a heavy asset upload
  rpc CompleteAssetUpload(CompleteAssetUploadRequest) returns (Asset);

  // Get asset metadata
  rpc GetAsset(GetAssetRequest) returns (Asset);

  // Stream asset content
  rpc StreamAssetContent(GetAssetRequest) returns (stream AssetChunk);

  // Delete an asset
  rpc DeleteAsset(DeleteAssetRequest) returns (google.protobuf.Empty);

  // List user assets with pagination
  rpc ListUserAssets(ListUserAssetsRequest) returns (ListUserAssetsResponse);

  // List system assets with pagination
  rpc ListSystemAssets(ListSystemAssetsRequest) returns (ListSystemAssetsResponse);

  // Subscribe to user asset updates stream
  rpc SubscribeToUserAssets(SubscribeToUserAssetsRequest) returns (stream AssetUpdate);

  // Subscribe to system asset updates stream
  rpc SubscribeToSystemAssets(google.protobuf.Empty) returns (stream AssetUpdate);

  // Broadcast a system asset to all subscribers
  rpc BroadcastSystemAsset(BroadcastSystemAssetRequest) returns (Asset);
}

// Asset represents a 3D asset and its metadata
message Asset {
  // Unique identifier
  string id = 1;

  // Owner user ID
  string user_id = 2;

  // Asset type (light/heavy)
  AssetType type = 3;

  // Asset name
  string name = 4;

  // MIME type
  string mime_type = 5;

  // Size in bytes
  int64 size = 6;

  // Binary data for light assets
  bytes data = 7;

  // URL for heavy assets
  string url = 8;

  // Whether this is a system asset
  bool is_system = 9;

  // Creation timestamp
  google.protobuf.Timestamp created_at = 10;

  // Last update timestamp
  google.protobuf.Timestamp updated_at = 11;

  // Deletion timestamp (if soft deleted)
  google.protobuf.Timestamp deleted_at = 12;
}

// Asset types
enum AssetType {
  ASSET_TYPE_UNSPECIFIED = 0;
  ASSET_TYPE_LIGHT = 1;  // < 500KB, stored in DB
  ASSET_TYPE_HEAVY = 2;  // >= 500KB, stored externally
}

// Request to upload a light asset
message UploadLightAssetRequest {
  string user_id = 1;
  string name = 2;
  string mime_type = 3;
  bytes data = 4;
}

// Request to start a heavy asset upload
message StartHeavyAssetUploadRequest {
  string user_id = 1;
  string name = 2;
  string mime_type = 3;
  int64 size = 4;
}

// Response for starting a heavy asset upload
message StartHeavyAssetUploadResponse {
  string upload_id = 1;
  int32 chunk_size = 2;
  int32 chunks_total = 3;
}

// Chunk of asset data for streaming
message AssetChunk {
  string upload_id = 1;
  bytes data = 2;
  uint32 sequence = 3;
}

// Request to complete an asset upload
message CompleteAssetUploadRequest {
  string upload_id = 1;
}

// Request to get an asset
message GetAssetRequest {
  string id = 1;
}

// Request to delete an asset
message DeleteAssetRequest {
  string id = 1;
  string user_id = 2;
}

// Request to list user assets
message ListUserAssetsRequest {
  string user_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

// Response for listing user assets
message ListUserAssetsResponse {
  repeated Asset assets = 1;
  string next_page_token = 2;
}

// Request to list system assets
message ListSystemAssetsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

// Response for listing system assets
message ListSystemAssetsResponse {
  repeated Asset assets = 1;
  string next_page_token = 2;
}

// Request to subscribe to user asset updates
message SubscribeToUserAssetsRequest {
  string user_id = 1;
}

// Asset update notification
message AssetUpdate {
  // Type of update
  UpdateType type = 1;

  // The asset data
  Asset asset = 2;

  // Error if any
  string error = 3;

  enum UpdateType {
    UPDATE_TYPE_UNSPECIFIED = 0;
    UPDATE_TYPE_USER = 1;
    UPDATE_TYPE_SYSTEM = 2;
  }
}

// Request to broadcast a system asset
message BroadcastSystemAssetRequest {
  string name = 1;
  string mime_type = 2;
  bytes data = 3;
} 